--- a/src/styles.scss
+++ b/src/styles.scss
@@ -266,6 +266,10 @@ h1 {
   align-items: center;
 }
 
+.mat-menu-panel {
+  min-width: auto !important;
+  min-height: auto !important;
+}
 
 
 
